# compwaves

./: .gitattributes
sc/: freq.scd
tidal/: sample.tidal
visual/: Cargo.toml
visual/app/: Cargo.toml
visual/app/src/: main.rs  scenes.rs
visual/app/src/scene/: hat.rs  kick.rs  snare.rs
visual/app/src/scenes/: hat.rs  kick.rs  snare.rs
visual/core/: Cargo.toml
visual/core/src/: app.rs  lib.rs  model.rs  osc.rs  params.rs  scene.rs  sound.rs
visual/src/: main.rs  model.rs  osc.rs  params.rs  scene.rs
visual/src/scene/: hat.rs  kick.rs  snare.rs
