[package]
name = "core"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
serde = { version = "1.0.219" }
nannou = "0.19.0"
rosc = "0.11.3"
rodio = { version = "0.20", features = ["default"] }
nannou_audio = "0.19.0"
color-eyre = "0.6.3"
uuid = { version = "1.16.0", features = ["v4"] }
notify = "8.0.0"
toml = "0.8.20"
